load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:project/project.bzl", "BUILD_TIME")

ddk_module(
    name = "amlogic-memory-debug",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_MEMORY_DEBUG": {
            True: ["main.c"],
        },
        "CONFIG_AMLOGIC_FILE_CACHE": {
            True: ["memory_ext/file_cache.c"],
        },
        "CONFIG_AMLOGIC_WATCHPOINT": {
            True: ["memory_ext/watch_point.c"],
        },
        "CONFIG_AMLOGIC_REG_ACCESS": {
            True: ["reg_access/reg_access.c"],
        },
        "CONFIG_AMLOGIC_DDR_TOOL": {
            True: [
                "ddr_tool/ddr_tool.c",
                "ddr_tool/ddr_port_desc.c",
            ],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH": {
            True: [
                "ddr_tool/ddr_bandwidth.c",
                "ddr_tool/ddr_priority.c",
            ],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_GXL": {
            True: ["ddr_tool/ddr_band_op_gxl.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_GX": {
            True: ["ddr_tool/ddr_band_op_gx.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_G12": {
            True: ["ddr_tool/ddr_band_op_g12.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_A1": {
            True: ["ddr_tool/ddr_band_op_a1.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_T5": {
            True: ["ddr_tool/ddr_band_op_t5.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_T7": {
            True: ["ddr_tool/ddr_band_op_t7.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_S4": {
            True: ["ddr_tool/ddr_band_op_s4.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_S5": {
            True: ["ddr_tool/ddr_band_op_s5.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_S6": {
            True: ["ddr_tool/ddr_band_op_s6.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_C3": {
            True: ["ddr_tool/ddr_band_op_c3.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_T5M": {
            True: ["ddr_tool/ddr_band_op_t5m.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_TXHD2": {
            True: ["ddr_tool/ddr_band_op_txhd2.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_S1A": {
            True: ["ddr_tool/ddr_band_op_s1a.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_A4": {
            True: ["ddr_tool/ddr_band_op_a4.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_S7": {
            True: ["ddr_tool/ddr_band_op_s7.c"],
        },
        "CONFIG_AMLOGIC_DDR_BANDWIDTH_T6D": {
            True: ["ddr_tool/ddr_band_op_t6d.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR": {
            True: [
                "ddr_tool/dmc_monitor.c",
                "ddr_tool/dmc_port_sub.c",
            ],
        },
        "CONFIG_AMLOGIC_DMC_DEV_ACCESS": {
            True: ["ddr_tool/dmc_dev_access.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_G12": {
            True: ["ddr_tool/dmc_g12.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_TM2": {
            True: ["ddr_tool/dmc_tm2.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_GX": {
            True: ["ddr_tool/dmc_gx.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_C1": {
            True: ["ddr_tool/dmc_c1.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_T7": {
            True: ["ddr_tool/dmc_t7.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_S4": {
            True: ["ddr_tool/dmc_s4.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_S5": {
            True: ["ddr_tool/dmc_s5.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_S6": {
            True: ["ddr_tool/dmc_s6.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_C2": {
            True: ["ddr_tool/dmc_c2.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_C3": {
            True: ["ddr_tool/dmc_c3.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_T5M": {
            True: ["ddr_tool/dmc_t5m.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_TXHD2": {
            True: ["ddr_tool/dmc_txhd2.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_S1A": {
            True: ["ddr_tool/dmc_s1a.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_A4": {
            True: ["ddr_tool/dmc_a4.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_S7": {
            True: ["ddr_tool/dmc_s7.c"],
        },
        "CONFIG_AMLOGIC_DMC_MONITOR_T6D": {
            True: ["ddr_tool/dmc_t6d.c"],
        },
        "CONFIG_AMLOGIC_RAMDUMP": {
            True: ["ramdump/ram_dump.c"],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
        "ddr_tool/dmc_monitor.h",
        "ddr_tool/ddr_port.h",
    ],
    linux_includes = [
        "ddr_tool",
    ],
    local_defines = [
        "pr_fmt(fmt)=\"[memory-debug]: \" fmt",
	"BUILD_TIME=\"{}\"".format(BUILD_TIME),
    ],
    out = "amlogic-memory-debug.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/memory_ext:page_trace",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
    ],
)
