load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")

ddk_module(
    name = "amlogic-pm",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PM": {
            True: ["main.c"],
        },
        "CONFIG_AMLOGIC_GX_SUSPEND": {
            True: ["gx_pm.c"],
        },
        "CONFIG_AMLOGIC_GX_REBOOT": {
            True: ["reboot.c"],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
        "//common:kernel/power/power.h",
    ],
    linux_includes = [
        "../../../common/kernel/power",
    ],
    local_defines = [
        "pr_fmt(fmt)=\"[pm]: \" fmt",
        "__module_param(name, type, perm)=",
        "__module_param_named(name, value, type, perm)=",
        "__module_param_array(name, type, nump, perm)=",
        "__module_param_cb(name, ops, arg, perm)=",
        "__module_param_array_named(name, array, type, nump, perm)=",
    ],
    out = "amlogic-pm.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
        "//common_drivers/drivers/power:amlogic-power",
    ],
)
