load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

amlogic_power_deps0 = [
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/debug:amlogic-debug",
]
amlogic_power_deps = [i for i in amlogic_power_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-power",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_POWER": {
            True: [
                "main.c",
                "power_domain_sysfs.c",
                "sec_pwr_ctrl.c",
                "sec_power_domain.c",
            ],
        },

        "CONFIG_AMLOGIC_POWER_EE": {
            True: ["power_ee_domain.c"],
        },

        "CONFIG_AMLOGIC_BATTERY_PMIC6B": {
            True: ["meson_pmic6b/pmic6b_battery.c"],
        },
    },
    hdrs = ["//common_drivers:soc_headers"],
    local_defines = ["pr_fmt(fmt)=\"[power]: \" fmt"],
    out = "amlogic-power.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_power_deps,
)
