load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "amlogic-power",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_POWER": {
            True: [
                "main.c",
                "power_domain_sysfs.c",
                "sec_pwr_ctrl.c",
                "sec_power_domain.c",
            ],
        },

        "CONFIG_AMLOGIC_POWER_EE": {
            True: ["power_ee_domain.c"],
        },

        "CONFIG_AMLOGIC_BATTERY_PMIC6B": {
            True: ["meson_pmic6b/pmic6b_battery.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[power]: \" fmt"],
    out = "amlogic-power.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
    ],
)
